# dattobd

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMAKE_GUIDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.trae/: README.md
.trae/feature-userstream/: plan.md  relayfs-implementation-steps.md  relayfs-implementation.md
app/: CMakeLists.txt  Makefile  apply-bcslog  apply-bcslog.c  dbdbcsd  dbdbcsd.c  dbdctl.c  update-img.c
cmake/: dattobdConfig.cmake.in
doc/: BLOCK_CHANGE_STREAM_CHECKLIST.md  STRUCTURE.md  STRUCTURE_CN.md  dbdctl.8_CN.md  update-img.8_CN.md
doc/analysis/: analysis.md  architecture.drawio  bio-interception.drawio  cow-structure.drawio  incremental-backup-flow.drawio  snapshot-creation-flow.drawio  state-machine.drawio
lib/: CMakeLists.txt  libdattobd.c  libdattobd.h
src/: CMakeLists.txt  bdev_state_handler.c  bdev_state_handler.h  binlog_export.c  binlog_export.h  bio_helper.c  bio_helper.h  bio_list.c  bio_list.h  bio_queue.c  bio_queue.h  bio_request_callback.h  blkdev.c  blkdev.h  block_change_stream.c  block_change_stream.h  block_change_stream_chrdev.c  block_change_stream_chrdev.h  block_change_stream_ring.c  block_change_stream_ring.h  callback_refs.c  callback_refs.h  config.h  cow_manager.c  cow_manager.h  dattobd.h  filesystem.c  filesystem.h  ftrace_hooking.c  ftrace_hooking.h  genconfig.sh  hints.h  includes.h  ioctl_handlers.c  kernel_hooking.h  kretprobe_hooking.c  kretprobe_hooking.h  logging.h  memory.c  memory.h  (+37 more)
src/configure-tests/: symbol-tests
utils/: CMakeLists.txt  update-img.c
